updated translation files

--- a/plugins/UserSettings/lang/am.json
+++ b/plugins/UserSettings/lang/am.json
@@ -155,7 +155,6 @@
         "Language_zh": "ቻይንኛ",
         "Language_zu": "ዙሉኛ",
         "LanguageCode": "የቋንቋ ኮድ",
-        "VisitorSettings": "የጎበኚዎች ቅንብሮች",
-        "WidgetPlugins": "የተሰኪዎች ዝርዝር"
+        "VisitorSettings": "የጎበኚዎች ቅንብሮች"
     }
 }
