--- a/plugins/UserSettings/lang/ar.json
+++ b/plugins/UserSettings/lang/ar.json
@@ -185,8 +185,6 @@
         "Language_zu": "الزولو",
         "LanguageCode": "كود اللغة",
         "PluginDescription": "تقارير عن إعدادات المستخدمين المختلفة: المتصفح، عائلة المتصفح، نظام التشغيل، الإضافات البرمجية، كثافة الشاشة النقطية، الإعدادات العامة.",
-        "PluginDetectionDoesNotWorkInIE": "ملاحظة: اكتشاف الإضافات البرمجية لا تعمل في متصفح إنترنت إكسبلورر. هذه الخاصية ترتكز للمتصفحات من العائلات الأخرى غير إنترنت إكسبلورر.",
-        "VisitorSettings": "إعدادات الزوار",
-        "WidgetPlugins": "قائمة الإضافات"
+        "VisitorSettings": "إعدادات الزوار"
     }
 }
