--- a/plugins/UserSettings/lang/be.json
+++ b/plugins/UserSettings/lang/be.json
@@ -116,9 +116,6 @@
         "Language_zu": "зулу",
         "LanguageCode": "Код мовы",
         "PluginDescription": "Справаздачы наладак карыстальнікаў: Браўзэр, Сямейства Браўзэр сям'і, Аперацыйная сістэма, Плагіны, Глабальныя параметры.",
-        "PluginDetectionDoesNotWorkInIE": "Заўважце: Плагіны не вызначаюцца ў Internet Explorer. Гэта справаздача заснавана на не-IE браўзарах.",
-        "VisitorSettings": "Налады карыстача",
-        "WidgetPlugins": "Спіс плагінаў",
-        "WidgetPluginsDocumentation": "Гэтая справаздача паказвае, якія плагіны были ўключаны ў браўзэраў Вашых наведвальнікаў. Гэтая інфармацыя можа мець важнае значэнне для выбару правільнага спосабу дастаўкі кантэнту."
+        "VisitorSettings": "Налады карыстача"
     }
 }
