--- a/plugins/UserSettings/lang/bg.json
+++ b/plugins/UserSettings/lang/bg.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Език на браузъра",
-        "BrowserWithNoPluginsEnabled": "%1$s без активни добавки",
-        "BrowserWithPluginsEnabled": "%1$s с добавки %2$s активиран",
         "Language_aa": "афарски",
         "Language_ab": "абхазки",
         "Language_ae": "авестийски",
@@ -189,9 +187,6 @@
         "Language_zu": "зулуски",
         "LanguageCode": "Код на езика",
         "PluginDescription": "Докладът за различните потребителски настройки: Браузър, Браузър Семейство, операционна система, модули, резолюция, Глобални настройки.",
-        "PluginDetectionDoesNotWorkInIE": "Забележка: Засичането на добавки не работи при Internet Explorer. Този доклад е базиран само на браузъри, различни от IE.",
-        "VisitorSettings": "Настройки на посетителя",
-        "WidgetPlugins": "Добавки",
-        "WidgetPluginsDocumentation": "Този отчет показва каква добавка на браузъра са използвали вашите посетители. Тази информация може да е важна, за да изберете правилния начин за доставяне на вашето съдържание."
+        "VisitorSettings": "Настройки на посетителя"
     }
 }
