--- a/plugins/UserSettings/lang/el.json
+++ b/plugins/UserSettings/lang/el.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Γλώσσα φυλλομετρητή",
-        "BrowserWithNoPluginsEnabled": "%1$s με ανενεργά πρόσθετα",
-        "BrowserWithPluginsEnabled": "%1$s με %2$s πρόσθετα ενεργά",
         "Language_aa": "Αφαρικά",
         "Language_ab": "Αμπχαζικά",
         "Language_ae": "Αβεστανικά",
@@ -189,9 +187,6 @@
         "Language_zu": "Ζουλού",
         "LanguageCode": "Κωδικός γλώσσας",
         "PluginDescription": "Αναφέρει διάφορες Ρυθμίσεις Χρήστη: Φυλλομετρητής, Ομάδα Φυλλομετρητών, Λειτουργικό Σύστημα, Πρόσθετα, Ανάλυση, Γενικές Ρυθμίσεις.",
-        "PluginDetectionDoesNotWorkInIE": "Σημείωση: η ανίχνευση Προσθέτων δεν λειτουργεί στον Internet Explorer. Αυτή η αναφορά βασίζεται μόνο σε μη IE φυλλομετρητές.",
-        "VisitorSettings": "Ρυθμίσεις επισκέπτη",
-        "WidgetPlugins": "Λίστα προσθέτων",
-        "WidgetPluginsDocumentation": "Αυτή η αναφορά δείχνει ποια πρόσθετα φυλλομετρητή έχουν ενεργά οι επισκέπτες σας. Αυτή η πληροφορία ίσως είναι σημαντική για την επιλογή του πιο σωστού τρόπου απόδοσης του περιεχομένου σας."
+        "VisitorSettings": "Ρυθμίσεις επισκέπτη"
     }
 }
