--- a/plugins/UserSettings/lang/eu.json
+++ b/plugins/UserSettings/lang/eu.json
@@ -146,7 +146,6 @@
         "Language_zh": "txinera",
         "Language_zu": "zuluera",
         "LanguageCode": "Hizkuntza-kodea",
-        "VisitorSettings": "Bisitariaren ezarpenak",
-        "WidgetPlugins": "Pluginen zerrenda"
+        "VisitorSettings": "Bisitariaren ezarpenak"
     }
 }
