--- a/plugins/UserSettings/lang/fa.json
+++ b/plugins/UserSettings/lang/fa.json
@@ -1,7 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "زبان مرورگر",
-        "BrowserWithNoPluginsEnabled": "%1$s با هیچ پلاگین را فعال کنید",
         "Language_aa": "آفاری",
         "Language_ab": "آبخازیایی",
         "Language_ae": "اوستایی",
@@ -188,9 +187,6 @@
         "Language_zu": "زولویی",
         "LanguageCode": "کد زبان",
         "PluginDescription": "گزارش تنظیمات کاربر های مختلف: مرورگر، Family (خانواده) مرورگر، سیستم عامل، پلاگین، سایز تصویر، تنظیمات جهانی است.",
-        "PluginDetectionDoesNotWorkInIE": "توجه: تشخیص پلاگین در مرورگر اینترنت اکسپلورر کار نمی کند. این گزارش تنها بر روی مرورگرهای غیر اینترنت اکسپلورر است.",
-        "VisitorSettings": "تنظیمات بازدید کننده",
-        "WidgetPlugins": "لیست افزونه ها",
-        "WidgetPluginsDocumentation": "این گزارش نشان می دهد که پلاگین مرورگر بازدید کننده خود را فعال کرده بود. این اطلاعات ممکن است مهم برای انتخاب راه درست برای ارائه محتوای خود را."
+        "VisitorSettings": "تنظیمات بازدید کننده"
     }
 }
