--- a/plugins/UserSettings/lang/ka.json
+++ b/plugins/UserSettings/lang/ka.json
@@ -159,8 +159,6 @@
         "Language_zu": "ზულუ",
         "LanguageCode": "ენის კოდი",
         "PluginDescription": "იძლევა ანგარიშს მომხმარებლის სხვადასხვა პარამეტრებზე: ბრაუზერები, ბრაუზერის ოჯახი, ოპერაციული სისტემა, პლაგინები, რეზოლუცია, გლობალური პარამეტრები.",
-        "PluginDetectionDoesNotWorkInIE": "შენიშვნა: პლაგინების ამოცნობა არ ხდება ინტერნეტ ექსპლორერში. ეს რეპორტი მუშაოაბს მხოლოდ არა–IE ბრაუზერებზე.",
-        "VisitorSettings": "ვიზიტორის პარამეტრები",
-        "WidgetPlugins": "პლაგინების სია"
+        "VisitorSettings": "ვიზიტორის პარამეტრები"
     }
 }
