--- a/plugins/UserSettings/lang/lv.json
+++ b/plugins/UserSettings/lang/lv.json
@@ -186,9 +186,6 @@
         "Language_zu": "zulu",
         "LanguageCode": "Valodas kods",
         "PluginDescription": "Apskata dažādus lietotāju iestatījumus: pārlūku, pārlūku ģimeni, operētājsistēmu, spraudņus, ekrāna izšķirtspēju, globālos iestatījumus.",
-        "PluginDetectionDoesNotWorkInIE": "Piezīme: spraudņu noteikšana nedarbojas Internet Explorer pārlūkā. Šī atskaite ir bāzēta tikai uz ne-IE pārlūkiem.",
-        "VisitorSettings": "Apmeklētāju iestatījumi",
-        "WidgetPlugins": "Spraudņu saraksts",
-        "WidgetPluginsDocumentation": "Šajā atskaitē ir redzami pārlūku spraudņi, kuri bija ieslēgti apmeklētāju pārlūkos. Šī informācija ir svarīga, lai izvēlētos vislabāko veidu kā piegādāt saturu apmeklētājiem."
+        "VisitorSettings": "Apmeklētāju iestatījumi"
     }
 }
