--- a/plugins/UserSettings/lang/pt-br.json
+++ b/plugins/UserSettings/lang/pt-br.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Idioma do navegador",
-        "BrowserWithNoPluginsEnabled": "%1$s sem plugins ativados",
-        "BrowserWithPluginsEnabled": "%1$s com os plugins %2$s ativados",
         "Language_aa": "afar",
         "Language_ab": "abcázio",
         "Language_ae": "avéstico",
@@ -189,9 +187,6 @@
         "Language_zu": "zulu",
         "LanguageCode": "Código do Idioma",
         "PluginDescription": "Relatórios diversas configurações de usuário: navegador, navegador família, sistema operacional, plugins, resolução, configurações globais.",
-        "PluginDetectionDoesNotWorkInIE": "Nota: a detecção de plugins não funciona no Internet Explorer. Esse relatório é baseado apenas em navegadores não IE.",
-        "VisitorSettings": "Configurações dos visitantes",
-        "WidgetPlugins": "Lista de Plugins",
-        "WidgetPluginsDocumentation": "Este relatório mostra quais plugins de navegador seus visitantes tinham ativado. Esta informação pode ser importante para escolher o caminho certo para levar o seu conteúdo."
+        "VisitorSettings": "Configurações dos visitantes"
     }
 }
