--- a/plugins/UserSettings/lang/ru.json
+++ b/plugins/UserSettings/lang/ru.json
@@ -187,9 +187,6 @@
         "Language_zu": "зулу",
         "LanguageCode": "Код языка",
         "PluginDescription": "Ведет учет различных настроек пользователя: браузер, семейство браузера, операционная система, плагины, разрешение экрана, а также глобальные настройки.",
-        "PluginDetectionDoesNotWorkInIE": "Учтите: Определение плагинов не работает в Internet Explorer. Этот отчет содержит информацию о не-IE браузерах.",
-        "VisitorSettings": "Настройки посетителей",
-        "WidgetPlugins": "Список плагинов",
-        "WidgetPluginsDocumentation": "Этот отчет показывается какие плагины посетители используют в своих браузерах. Эта информация может быть важна для того, чтобы посетители смогли видеть ваш контент должным образом."
+        "VisitorSettings": "Настройки посетителей"
     }
 }
