--- a/plugins/UserSettings/lang/sl.json
+++ b/plugins/UserSettings/lang/sl.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Jezik brskalnika",
-        "BrowserWithNoPluginsEnabled": "%1$s brez omogočenih vtičnikov",
-        "BrowserWithPluginsEnabled": "%1$s z omogočenimi vtičniki %2$s",
         "Language_aa": "afarščina",
         "Language_ab": "abhaščina",
         "Language_ae": "avestijščina",
@@ -188,7 +186,6 @@
         "Language_zh": "kitajščina",
         "Language_zu": "zulujščina",
         "LanguageCode": "Šifra jezika",
-        "VisitorSettings": "Nastavitve obiskovalcev",
-        "WidgetPlugins": "Seznam Vtičnikov"
+        "VisitorSettings": "Nastavitve obiskovalcev"
     }
 }
