--- a/plugins/UserSettings/lang/ca.json
+++ b/plugins/UserSettings/lang/ca.json
@@ -186,9 +186,6 @@
         "Language_zu": "Zulu",
         "LanguageCode": "Codi de l'idioma",
         "PluginDescription": "Informe sobre les preferències del usuari: Navegador, Família del navegador, Sistema Operatiu, Extensions, Resolució, Preferències Globals",
-        "PluginDetectionDoesNotWorkInIE": "Nota: La detecció d'extensions no funciona amb Internet Explorer. L'informe es basa nomes amb navegadors diferents de l'Internet Explorer",
-        "VisitorSettings": "Configuració del visitant",
-        "WidgetPlugins": "Llistat de connectors",
-        "WidgetPluginsDocumentation": "Aquest informe mostra quines extensions tenen els vostres visitants activades. Aquesta informació pot ser important per determinar la forma correcta de mostrar el contingut."
+        "VisitorSettings": "Configuració del visitant"
     }
 }
