--- a/plugins/UserSettings/lang/cs.json
+++ b/plugins/UserSettings/lang/cs.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Jazyk prohlížeče",
-        "BrowserWithNoPluginsEnabled": "%1$s bez povolených zásuvných modulů",
-        "BrowserWithPluginsEnabled": "%1$s s povolenými zásuvnými moduly %2$s",
         "Language_aa": "afarština",
         "Language_ab": "abcházština",
         "Language_ae": "avestánština",
@@ -189,9 +187,6 @@
         "Language_zu": "zulu",
         "LanguageCode": "Jazykový kód",
         "PluginDescription": "Zobrazí různá uživatelská nastavení: prohlížeč, rodinu prohlížečů, operační systém, zásuvné moduly, rozlišení, globální nastavení.",
-        "PluginDetectionDoesNotWorkInIE": "Poznámka: Detekce zásuvných modulů nepracuje v prohlížeči Interet Explorer. Toto hlášení je založeno na ostatních prohlížečích",
-        "VisitorSettings": "Nastavení návštěvníků",
-        "WidgetPlugins": "Seznam zásuvných modulů",
-        "WidgetPluginsDocumentation": "Toto hlášení zobrazuje zásuvné moduly, které měli vaši návštěvníci povoleny. Tato informace může být důležitá při rozhodování o tom, jakým způsobem prezentovat obsah."
+        "VisitorSettings": "Nastavení návštěvníků"
     }
 }
