--- a/plugins/UserSettings/lang/it.json
+++ b/plugins/UserSettings/lang/it.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Lingua Browser",
-        "BrowserWithNoPluginsEnabled": "%1$s con nessun plugin abilitato",
-        "BrowserWithPluginsEnabled": "%1$s con plugin %2$s abilitati",
         "Language_aa": "afar",
         "Language_ab": "abkhazian",
         "Language_ae": "avestan",
@@ -189,9 +187,6 @@
         "Language_zu": "zulu",
         "LanguageCode": "Codice della lingua",
         "PluginDescription": "Mostra le varie impostazioni per gli utenti: Browser, Famiglia del Browser, Sistema Operativo, Plugin, Risoluzione, Impostazioni Globali.",
-        "PluginDetectionDoesNotWorkInIE": "N.B.: Questo plugin non funziona su Internet Explorer. Questo report è basato solamente sugli utenti di altri browser.",
-        "VisitorSettings": "Impostazioni visitatori",
-        "WidgetPlugins": "Lista dei Plugin",
-        "WidgetPluginsDocumentation": "Questo report mostra quali plugin del browser i visitatori avevano abilitato. Questa informazione potrebbe essere importante per la scelta del giusto modo di inviare i tuoi contenuti."
+        "VisitorSettings": "Impostazioni visitatori"
     }
 }
