--- a/plugins/UserSettings/lang/lt.json
+++ b/plugins/UserSettings/lang/lt.json
@@ -186,8 +186,6 @@
         "Language_zu": "zulų",
         "LanguageCode": "Kalbos kodas",
         "PluginDescription": "Parodo įvairius lankytojo nustatymus: naršyklę, naršyklės šeimą, operacinę sistemą, papildinius, ekrano raišką, skiriamąją gebą, globalius nustatymus.",
-        "PluginDetectionDoesNotWorkInIE": "Pastaba: papildinio aptikimas neveikia Internet Explorer naršyklėje. Ši ataskaita bus sugeneruota tik kitose naršyklėse.",
-        "VisitorSettings": "Lankytojų nustatymai",
-        "WidgetPlugins": "Papildinių sąrašas"
+        "VisitorSettings": "Lankytojų nustatymai"
     }
 }
