--- a/plugins/UserSettings/lang/nl.json
+++ b/plugins/UserSettings/lang/nl.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Browsertaal",
-        "BrowserWithNoPluginsEnabled": "%1$s zonder plugins ingeschakeld",
-        "BrowserWithPluginsEnabled": "%1$s met plugins %2$s ingeschakeld",
         "Language_aa": "Afar",
         "Language_ab": "Abchazisch",
         "Language_ae": "Avestisch",
@@ -189,9 +187,6 @@
         "Language_zu": "Zulu",
         "LanguageCode": "Taal code",
         "PluginDescription": "Rapporteert verschillende gebruikers instellingen: Browser, Browser familie, Besturingssysteem, Plugins, Resolutie, Globale Instellingen.",
-        "PluginDetectionDoesNotWorkInIE": "Opmerking: plugin detectie werkt niet in Internet Explorer. Het rapport is alleen gebaseerd op andere browsers dan IE",
-        "VisitorSettings": "Bezoekers Instellingen",
-        "WidgetPlugins": "Geïnstalleerde plugins",
-        "WidgetPluginsDocumentation": "Dit rapport laat zien welke browserplugins uw bezoekers haden geïnstalleerd. Deze informatie kan van belang zijn voor het kiezen van de juiste manier om uw content aan te bieden."
+        "VisitorSettings": "Bezoekers Instellingen"
     }
 }
