--- a/plugins/UserSettings/lang/pt.json
+++ b/plugins/UserSettings/lang/pt.json
@@ -186,9 +186,6 @@
         "Language_zu": "zulu",
         "LanguageCode": "Código do idioma",
         "PluginDescription": "Relata várias Definições de Utilizador: Navegador, Família de Navegadores, Sistema Operativo, Plugins, Resolução, Definições Globais",
-        "PluginDetectionDoesNotWorkInIE": "Nota: Detecção de plugins não funciona no Internet Explorer. Este relatório só se baseia em navegadores não-IE.",
-        "VisitorSettings": "Definições do Visitante",
-        "WidgetPlugins": "Lista de Plugins",
-        "WidgetPluginsDocumentation": "Este relatório mostra quais os plugin que o navegador dos seus visitantes tinham. Esta informação pode ser importante para a escolha do caminho certo para distribuir o seu conteúdo."
+        "VisitorSettings": "Definições do Visitante"
     }
 }
