--- a/plugins/UserSettings/lang/ro.json
+++ b/plugins/UserSettings/lang/ro.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Limba browser-ului",
-        "BrowserWithNoPluginsEnabled": "%1$s fără plugin-uri activate",
-        "BrowserWithPluginsEnabled": "%1$s cu plugin-uri %2$s activate",
         "Language_aa": "Afar",
         "Language_ab": "abhază",
         "Language_ae": "avestană",
@@ -189,9 +187,6 @@
         "Language_zu": "zulu",
         "LanguageCode": "Cod limbă",
         "PluginDescription": "Rapoarte difera la setări utilizator: Browser, Browser de familie, sistemul de operare, plugins, Rezolutie, Global Setări.",
-        "PluginDetectionDoesNotWorkInIE": "Notă: de detectare a plugin-uri nu funcționează în Internet Explorer. Acest raport se bazează doar pe browsere non-IE.",
-        "VisitorSettings": "Setări vizitatori",
-        "WidgetPlugins": "Lista pluginurilor",
-        "WidgetPluginsDocumentation": "Acest raport arată ce plugin-uri de browser-ul au activat vizitatorii. Aceste informație ar putea fi importanta pentru a alege modul corect de a livra conținut."
+        "VisitorSettings": "Setări vizitatori"
     }
 }
