--- a/plugins/UserSettings/lang/sr.json
+++ b/plugins/UserSettings/lang/sr.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Jezik brauzera",
-        "BrowserWithNoPluginsEnabled": "%1$s sa isključenim dodacima",
-        "BrowserWithPluginsEnabled": "%1$s sa uključenim dodacima %2$s",
         "Language_aa": "Afar",
         "Language_ab": "Abhazijski",
         "Language_ae": "Avestan",
@@ -189,9 +187,6 @@
         "Language_zu": "Zulu",
         "LanguageCode": "Kod jezika",
         "PluginDescription": "Izveštaj o različitim parametrima vezanim za posetioce: brauzeri, operativni sistemi, dodaci, ekranske rezolucije, globalna podešavanja.",
-        "PluginDetectionDoesNotWorkInIE": "Pažnja: detekcija dodataka ne radi kod Internet Explorera. Ovaj izveštaj se odnosi samo na brauzere koji nisu Internet Exlorer",
-        "VisitorSettings": "Parametri posetilaca",
-        "WidgetPlugins": "Lista dodataka",
-        "WidgetPluginsDocumentation": "Ovaj izveštaj prikazuje koje dodatke za brauzere vaši posetioci imaju uključene. Ova informacija može biti od značaja prilikom odabira pravog načina prikaza sadržaja na vašem sajtu."
+        "VisitorSettings": "Parametri posetilaca"
     }
 }
