--- a/plugins/UserSettings/lang/sv.json
+++ b/plugins/UserSettings/lang/sv.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Webbläsarspråk",
-        "BrowserWithNoPluginsEnabled": "%1$s med inga plugins är aktiverad",
-        "BrowserWithPluginsEnabled": "%1$s med plugins %2$s är aktiverad",
         "Language_aa": "Afar",
         "Language_ab": "Abchaziska",
         "Language_ae": "Avestiska",
@@ -189,9 +187,6 @@
         "Language_zu": "Zulu",
         "LanguageCode": "Språkkod",
         "PluginDescription": "Rapporterar olika användarinställningar: Webbläsare, Webbläsarfamilj, operativsystem, Plugins, upplösning, Globala inställningar.",
-        "PluginDetectionDoesNotWorkInIE": "Notering: Plugins upptäckt fungerar inte i Internet Explorer. Denna rapport är endast baserad på icke-IE webbläsare.",
-        "VisitorSettings": "Besökarinställningar",
-        "WidgetPlugins": "Lista över plugins",
-        "WidgetPluginsDocumentation": "Denna rapport visar vilka plugins i webbläsaren som besökarna hade aktiverat. Denna information kan vara viktig för att välja rätt sätt att leverera ditt innehåll."
+        "VisitorSettings": "Besökarinställningar"
     }
 }
