--- a/plugins/UserSettings/lang/th.json
+++ b/plugins/UserSettings/lang/th.json
@@ -186,8 +186,6 @@
         "Language_zu": "ซูลู",
         "LanguageCode": "รหัสภาษา",
         "PluginDescription": "รายงานการตั้งค่าผู้ใช้ต่างๆ: เบราว์เซอร์, ตระกูลเบราว์เซอร์,ระบบปฏิบัติการ, ปลั๊กอิน, การแก้ไขและการตั้งค่าส่วนกลาง",
-        "PluginDetectionDoesNotWorkInIE": "หมายเหตุ: ตรวจสอบปลั๊กอินไม่ทำงานใน Internet Explorer รายงานนี้จะอิงตามเฉพาะเบราว์เซอร์ที่ไม่ใช่ IE",
-        "VisitorSettings": "การตั้งค่าของผู้เข้าชม",
-        "WidgetPlugins": "รายการปลั้กอิน"
+        "VisitorSettings": "การตั้งค่าของผู้เข้าชม"
     }
 }
