--- a/plugins/UserSettings/lang/tl.json
+++ b/plugins/UserSettings/lang/tl.json
@@ -1,8 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "wika ng browser",
-        "BrowserWithNoPluginsEnabled": "%1$s na may plugins na hindi pinapagana",
-        "BrowserWithPluginsEnabled": "%1$s na may mga plugin %2$s na naka-enable",
         "Language_aa": "Afar",
         "Language_ab": "Abkhazian",
         "Language_ae": "Avestan",
@@ -188,9 +186,6 @@
         "Language_zu": "Zulu",
         "LanguageCode": "wika ng code",
         "PluginDescription": "Ulat para sa ibat-ibang mga Setting ng user: Browser Pamilya ng browser Operating System Plugins Resolution Pang-kalahatang settings.",
-        "PluginDetectionDoesNotWorkInIE": "Tandaan: Ang pagtingin ng Plugin ay hindi gumagana sa Internet Explorer. Ang ulat na ito ay batay lamang sa mga browser na hindi-IE.",
-        "VisitorSettings": "Mga Setting ng bisita",
-        "WidgetPlugins": "Browser Plugins",
-        "WidgetPluginsDocumentation": "Ang ulat na ito ay ipinapakita kung anong browser plugis ang gumagana sa iyong bisita. Ang impormasyon na ito may maaring mahalaga sa pagpili kung paanu ihahatid ang nilalaman nito."
+        "VisitorSettings": "Mga Setting ng bisita"
     }
 }
