--- a/plugins/UserSettings/lang/tr.json
+++ b/plugins/UserSettings/lang/tr.json
@@ -186,8 +186,6 @@
         "Language_zu": "Zulu",
         "LanguageCode": "Dil kodu",
         "PluginDescription": "Çeşitli kullanıcı rapor ayalari: Tarayıcı, Tarayıcı Ailesi, İşletim Sistemi, Eklentiler, Çözünürlük, Genel Ayarlar.",
-        "PluginDetectionDoesNotWorkInIE": "Not: Hedeflenen eklenti Internet Explorer çalışmamaktadir. Bu not\/rapor sadece IE içindir.",
-        "VisitorSettings": "Ziyaretçi Ayarlari",
-        "WidgetPlugins": "Eklenti Listesi"
+        "VisitorSettings": "Ziyaretçi Ayarlari"
     }
 }
