--- a/plugins/UserSettings/lang/uk.json
+++ b/plugins/UserSettings/lang/uk.json
@@ -186,8 +186,6 @@
         "Language_zu": "зулуська",
         "LanguageCode": "Код мови",
         "PluginDescription": "Повідомляє різні налаштуванян користовувача: веб-оглядач, родина веб-оглядача, операційна система, плагіни, роздільна здатність, глобальні налаштування.",
-        "PluginDetectionDoesNotWorkInIE": "Примітка: Визначення плагінів не працює в Internet Explorer. Цей звіт базується лише на не-IE веб-оглядачах.",
-        "VisitorSettings": "Налаштування відвідувача",
-        "WidgetPlugins": "Список плагінів"
+        "VisitorSettings": "Налаштування відвідувача"
     }
 }
