--- a/plugins/DevicesDetection/lang/pl.json
+++ b/plugins/DevicesDetection/lang/pl.json
@@ -1,5 +1,7 @@
 {
     "DevicesDetection": {
+        "BrowserEngine": "Silnik przeglądarki",
+        "BrowserEngines": "Silniki przeglądarek",
         "BrowserFamily": "Rodzina przeglądarek",
         "Browsers": "Przeglądarki",
         "BrowserVersion": "Wersja przeglądarki",
