--- a/plugins/Resolution/lang/it.json
+++ b/plugins/Resolution/lang/it.json
@@ -3,6 +3,7 @@
         "ColumnConfiguration": "Configurazione",
         "ColumnResolution": "Risoluzione",
         "Configurations": "Configurazioni",
+        "PluginDescription": "Fa un report della risoluzione dei visitatori",
         "Resolutions": "Risoluzioni",
         "WidgetGlobalVisitors": "Riepilogo configurazione visitatori",
         "WidgetGlobalVisitorsDocumentation": "Questo report mostra le configurazioni globali più comuni che i visitatori avevano. Una configurazione è la combinazione di un sistema operativo, un tipo browser e una risoluzione di schermo.",
