language update  refs #3430

--- a/lang/de.json
+++ b/lang/de.json
@@ -151,6 +151,7 @@
         "ExceptionContactSupportGeneric": "Falls dieses Problem weiterhin besteht %skontaktieren Sie bitte Ihren Piwik Administrator%s für Unterstützung.",
         "ExceptionDatabaseVersion": "Ihre %1$s-Version ist %2$s, aber Piwik benötigt mindestens %3$s",
         "ExceptionDatabaseVersionNewerThanCodebase": "Ihre Piwik Codebase läuft auf der alten Version %1$s und wir haben erkannt, dass Ihre Piwik Datenbank bereits auf die neuere Version %2$s aktualisiert wurde.",
+        "ExceptionDatabaseVersionNewerThanCodebaseWait": "Möglicherweise sind die Piwik Administratoren gerade daran, den Aktualisierungsprozess abzuschliessen. Bitte versuchen Sie es in ein paar Minuten noch einmal.",
         "ExceptionFileIntegrity": "Integritätsprüfung fehlgeschlagen: %s",
         "ExceptionFilesizeMismatch": "Unterschiedliche Dateigröße: %1$s (erwartete Größe: %2$s, gefunden: %3$s)",
         "ExceptionIncompatibleClientServerVersions": "Ihre %1$s-Client Version ist %2$s, die aber mit der Server-Version %3$s inkompatibel ist.",
