--- a/plugins/DevicePlugins/lang/el.json
+++ b/plugins/DevicePlugins/lang/el.json
@@ -2,6 +2,7 @@
     "DevicePlugins": {
         "BrowserWithNoPluginsEnabled": "%1$s με ανενεργά πρόσθετα",
         "BrowserWithPluginsEnabled": "%1$s με %2$s πρόσθετα ενεργά",
+        "PluginDescription": "Αναφέρει τα πρόσθετα του προγράμματος περιήγησης",
         "PluginDetectionDoesNotWorkInIE": "Σημείωση: η ανίχνευση Προσθέτων δεν λειτουργεί στον Internet Explorer. Αυτή η αναφορά βασίζεται μόνο σε μη IE φυλλομετρητές.",
         "WidgetPlugins": "Λίστα προσθέτων",
         "WidgetPluginsDocumentation": "Αυτή η αναφορά δείχνει ποια πρόσθετα φυλλομετρητή έχουν ενεργά οι επισκέπτες σας. Αυτή η πληροφορία ίσως είναι σημαντική για την επιλογή του πιο σωστού τρόπου απόδοσης του περιεχομένου σας."
