--- a/plugins/CorePluginsAdmin/lang/de.json
+++ b/plugins/CorePluginsAdmin/lang/de.json
@@ -20,6 +20,7 @@
         "CorePluginTooltip": "Core-Plugins haben keine Version, da diese mit ausgeliefert werden.",
         "Deactivate": "Deaktivieren",
         "Developer": "Entwickler",
+        "DevelopersLearnHowToDevelopPlugins": "Programmierer: Lernen Sie wie Sie Piwik erweitern und personalisieren können, in dem Sie %sPlugins oder Themes entwickeln%s.",
         "DoMoreContactPiwikAdmins": "Um ein neues Plugin oder Theme zu installieren, treten Sie bitte in Kontakt mit Ihren Piwik-Admins.",
         "EmailToEnquireUpdatedVersion": "Bitte schreiben Sie eine E-Mail and %1$s und fragen Sie nach einer aktualisierten Version von %2$s.",
         "FeaturedPlugin": "Top-Plugin",
