--- a/plugins/Installation/lang/de.json
+++ b/plugins/Installation/lang/de.json
@@ -29,6 +29,7 @@
         "InstallationStatus": "Installationstatus",
         "InsufficientPrivilegesHelp": "Sie können diese Rechte mit einem Tool wie phpMyAdmin oder den entsprechenden SQL Kommandos hinzufügen. Wenn Sie nicht wissen, was zu tun ist, wenden Sie sich bitte an den System Administrator, damit er für Sie diese Rechte setzt.",
         "InsufficientPrivilegesMain": "Entweder existiert die Datenbank nicht (und konnte nicht erstellt werden), oder der angegebene Benutzer hat unzureichende Berechtigungen. Der Datenbankbenutzer muss folgende Berechtigungen besitzen: %s",
+        "InvalidStateError": "Fehler: Piwik ist bereits installiert. %1$s Zurück %2$s zu Piwik%3$s.",
         "JsTagArchivingHelp1": "Für Webseiten mit mittlerem bis hohem Verkehrsaufkommen gibt es einige Optimierungen, die vorgenommen werden sollten, damit Piwik schneller läuft (z.B. %1$sdie Einrichtung von Auto-Archivierung%2$s).",
         "JSTracking_EndNote": "Hinweis: Nach der Installation können Sie sich einen angepassten Tracking Code unter Einstellungen > %1$sTracking Code%2$s erzeugen.",
         "JSTracking_Intro": "Um Ihre Webseite mit Piwik zu überwachen, müssen Sie sicherstellen, dass ein zusätzlicher Quellcode auf jede Ihrer Webseiten eingefügt wurde.",
@@ -94,6 +95,8 @@
         "SystemCheckOtherExtensions": "Andere Erweiterungen",
         "SystemCheckOtherFunctions": "Andere Funktionen",
         "SystemCheckPackHelp": "Die Funktion pack() wird benötigt um Besucher in Piwik tracken zu können.",
+        "SystemCheckPageSpeedDisabled": "PageSpeed deaktiviert",
+        "SystemCheckPageSpeedWarn": "Wir empfehlen, das PageSpeed Modul auf Ihrem Web Server zu deaktivieren %s: PageSpeed wurde als Verursacher diverser Probleme im Zusammenhang mit Piwik gemeldet.",
         "SystemCheckParseIniFileHelp": "Diese Funktion wird von Ihrem System nicht unterstützt. Piwik wird versuchen, diese Funktion zu emulieren, aber es könnte sein, dass dadurch Sicherheitseinstellungen gelockert werden müssen. Die Geschwindigkeit des Tracker könnte auch beeinflußt werden.",
         "SystemCheckPdoAndMysqliHelp": "Auf einem Linux-Server können Sie PHP mit den folgenden Optionen kompilieren: %1$s In Ihrer php.ini fügen Sie dann die folgenden Zeilen ein: %2$s",
         "SystemCheckPhp": "PHP-Version",
