--- a/plugins/Resolution/lang/de.json
+++ b/plugins/Resolution/lang/de.json
@@ -3,6 +3,7 @@
         "ColumnConfiguration": "Konfiguration",
         "ColumnResolution": "Auflösung",
         "Configurations": "Konfigurationen",
+        "PluginDescription": "Berichte über Bildschimauflösungen",
         "Resolutions": "Auflösungen",
         "WidgetGlobalVisitors": "Globale Besucherkonfiguration",
         "WidgetGlobalVisitorsDocumentation": "Dieser Bericht zeigt Ihnen die häufigsten Gesamtkonfigurationen der Besucher. Eine Konfiguration ist die Kombination aus Betriebssystem, Browsertyp und Bildschirmauflösung.",
