Fix typo in Russian translation: "авершена"

--- a/plugins/Installation/lang/ru.json
+++ b/plugins/Installation/lang/ru.json
@@ -49,7 +49,7 @@
         "SetupWebsiteSetupSuccess": "Сайт %s создан успешно!",
         "SetupWebSiteURL": "URL сайта",
         "SiteSetup": "Пожалуйста, добавьте первый сайт, который вы хотите отслеживать и анализировать с помощью Piwik:",
-        "SiteSetupFootnote": "Подсказка: Если установка Piwik авершена, вы сможете добавить больше сайтов для отслеживания!",
+        "SiteSetupFootnote": "Подсказка: Если установка Piwik завершена, вы сможете добавить больше сайтов для отслеживания!",
         "SuperUser": "Супер Администратор",
         "SuperUserLogin": "Логин суперпользователя",
         "SuperUserSetupError": "Был ошибка при добавлении Суперпользователя",
