--- a/plugins/UsersManager/lang/en.json
+++ b/plugins/UsersManager/lang/en.json
@@ -41,6 +41,7 @@
         "MenuAnonymousUserSettings": "Anonymous user settings",
         "MenuUsers": "Users",
         "MenuUserSettings": "User settings",
+        "PersonalSettings": "Personal settings",
         "NoteNoAnonymousUserAccessSettingsWontBeUsed2": "Note: You cannot change the settings in this section, because you do not have any website that can be accessed by the anonymous user.",
         "NoUsersExist": "There are no users yet.",
         "PluginDescription": "Users Management in Piwik: add a new User, edit an existing one, update the permissions. All the actions are also available through the API.",
