added a administration link in top menu, moved logout to user menu (tbd), renamend some settings links in admin

--- a/lang/en.json
+++ b/lang/en.json
@@ -188,7 +188,7 @@
         "Forums": "Forums",
         "FromReferrer": "from",
         "GeneralInformation": "General Information",
-        "GeneralSettings": "General Settings",
+        "General": "General",
         "GetStarted": "Get started",
         "GiveUsYourFeedback": "Give us Feedback!",
         "Goal": "Goal",
