--- a/plugins/Goals/lang/en.json
+++ b/plugins/Goals/lang/en.json
@@ -10,6 +10,7 @@
         "BestKeywords": "Your top converting keywords are:",
         "BestReferrers": "Your best converting websites referrers are:",
         "CaseSensitive": "Case sensitive match",
+        "CancelAndReturnToGoals": "Cancel and %sreturn to the list of goals%s",
         "ChooseGoal": "Choose Goal",
         "ClickOutlink": "Click on a Link to an external website",
         "SendEvent": "Send an event",
@@ -57,22 +58,20 @@
         "GoalIsTriggeredWhen": "Goal is triggered when",
         "GoalName": "Goal Name",
         "Goals": "Goals",
-        "GoalsManagement": "Goals management",
+        "ManageGoals": "Manage Goals",
         "GoalsOverview": "Goals Overview",
         "GoalsOverviewDocumentation": "This is an overview of your goal conversions. Initially, the graph shows the sum of all conversions. %s Below the graph, you can see conversion reports for each of your goals. The sparklines can be enlarged by clicking on them.",
         "GoalX": "Goal %s",
         "HelpOneConversionPerVisit": "If a Page matching this Goal is refreshed or viewed more than once in a Visit, the Goal will only be tracked the first time the page was loaded during this visit.",
         "IsExactly": "is exactly %s",
-        "LearnMoreAboutGoalTrackingDocumentation": "Learn more about %s Tracking Goals in Piwik%s in the user documentation, or create a Goal now!",
+        "LearnMoreAboutGoalTrackingDocumentation": "Learn more about %s Tracking Goals in Piwik%s in the user documentation.",
         "LeftInCart": "%s left in cart",
+        "ManageGoalsOrCreateANewGoal": "%sManage Goals%s or create a new Goal now!",
         "Manually": "manually",
         "ManuallyTriggeredUsingJavascriptFunction": "Goal is manually triggered using the JavaScript API trackGoal()",
         "MatchesExpression": "matches the expression %s",
-        "NewGoalDescription": "A Goal in Piwik is your strategy, your priority, and can entail many things: \"Downloaded brochure\", \"Registered newsletter\", \"Visited page services.html\", etc.",
         "NewGoalIntro": "Goal Conversion tracking is one of the most efficient ways to measure and improve your business objectives.",
-        "NewGoalYouWillBeAbleTo": "You will be able to view and analyse your performance for each Goal, and learn how to increase conversions, conversion rates and revenue per visit.",
         "NewVisitorsConversionRateIs": "New visitors conversion rate is %s",
-        "NewWhatDoYouWantUsersToDo": "What do you want your users to do on your website?",
         "NoGoalsNeedAccess": "Only an Administrator or a user with Super User access can add Goals for a given website. Please ask your Piwik administrator to set up a Goal for your website. <br>Tracking Goals is a great way to help understand and maximize your website performance!",
         "Optional": "(optional)",
         "OverallConversionRate": "%s overall conversion rate (visits with a completed goal)",
@@ -86,6 +85,7 @@
         "ProductSKU": "Product SKU",
         "ReturningVisitorsConversionRateIs": "Returning visitors conversion rate is %s",
         "SingleGoalOverviewDocumentation": "This is an overview of the conversions for a single goal. %s The sparklines below the graph can be enlarged by clicking on them.",
+        "ThereIsNoGoalToManage": "There is no goal to manage for website %s",
         "UpdateGoal": "Update Goal",
         "URL": "URL",
         "ViewAndEditGoals": "View and Edit Goals",
