splitted referrers overview in two parts "Overview" and "All Referrers"

--- a/plugins/Referrers/lang/en.json
+++ b/plugins/Referrers/lang/en.json
@@ -9,7 +9,6 @@
         "ColumnSocial": "Social network",
         "ColumnWebsite": "Website",
         "ColumnWebsitePage": "Website Page",
-        "DetailsByReferrerType": "Details by Referrer Type",
         "DirectEntry": "Direct Entry",
         "DirectEntryDocumentation": "A visitor has entered the URL in his browser and started browsing on your website - he entered the website directly.",
         "Distinct": "Distinct Referrers by Referrer Type",
@@ -26,6 +25,7 @@
         "ReferrerName": "Referrer Name",
         "Referrers": "Referrers",
         "ReferrersOverview": "Referrers Overview",
+        "ReferrerTypes": "Referrer Types",
         "SearchEngines": "Search Engines",
         "SearchEnginesDocumentation": "A visitor was referred to your website by a search engine. %s See the %s report for more details.",
         "SearchEnginesReportDocumentation": "This report shows which search engines referred users to your website. %s By clicking on a row in the table, you can see what users were searching for using a specific search engine.",
