--- a/lang/sv.json
+++ b/lang/sv.json
@@ -258,7 +258,7 @@
         "NMinutes": "%s minuter",
         "No": "Nej",
         "NoDataForGraph": "Inga data för denna graf.",
-        "NoDataForTagCloud": "Ingen data för detta taggmoln.",
+        "NoDataForTagCloud": "Inga data för detta taggmoln.",
         "NotDefined": "%s är inte definierat",
         "Note": "Notering",
         "NotInstalled": "Inte Installerad",
@@ -471,7 +471,7 @@
         "LastUpdated": "Senast uppdaterad: %s",
         "LoadingReport": "Laddar %s",
         "LoginCredentials": "Behörighet",
-        "LoginToPiwikToChangeSettings": "Logga in på din Piwik server för att skapa eller uppdatera webbsidor, användare och Generella inställningar så som \"Standarliserad rapport\"",
+        "LoginToPiwikToChangeSettings": "Logga in på din Piwikserver för att skapa eller uppdatera webbsidor, användare och Generella inställningar så som \"Standarliserad rapport\"",
         "LoginUseHttps": "Använd https",
         "MultiChartLabel": "Visa miniatyrdiagram",
         "NavigationBack": "Tillbaka",
