added in an accessible skip to content button for people who go through webages with the tab key

--- a/plugins/CoreHome/lang/en.json
+++ b/plugins/CoreHome/lang/en.json
@@ -51,6 +51,7 @@
         "ShortMonthFormat": "%shortMonth% %longYear%",
         "ShortWeekFormat": "%dayFrom% %shortMonthFrom% - %dayTo% %shortMonthTo% %shortYearTo%",
         "ShowJSCode": "Show the JavaScript code to insert",
+	"SkipToContent": "Skip to content",
         "SubscribeAndBecomePiwikSupporter": "Proceed to a secure credit card payment page (Paypal) to become a Piwik Supporter!",
         "SupportPiwik": "Support Piwik!",
         "TableNoData": "No data for this table.",
