changed the lang translation, as well as putting section tags around the user map to tab across it, and changed the alt text for "Goals.php." to distinguish between "Display a table with Goals metrics" and "Display a table with visitor enganement metrics

--- a/lang/en.json
+++ b/lang/en.json
@@ -124,7 +124,7 @@
         "Discount": "Discount",
         "DisplaySimpleTable": "Display simple table",
         "DisplayTableWithGoalMetrics": "Display a table with Goals metrics",
-        "DisplayTableWithMoreMetrics": "Display a table with more metrics",
+        "DisplayTableWithMoreMetrics": "Display a table with Visitor engagement metrics",
         "Documentation": "Documentation",
         "Donate": "Donate",
         "Done": "Done",
