Added multi languge to the offsceen 'Widget text'

--- a/lang/en.json
+++ b/lang/en.json
@@ -445,6 +445,7 @@
         "WeeklyReports": "Weekly reports",
         "WellDone": "Well done!",
         "Widgets": "Widgets",
+	"Widget": "Widget",
         "XComparedToY": "%1$s compared to %2$s",
         "XFromY": "%1$s from %2$s",
         "YearlyReport": "yearly",
